--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,12 @@
             </a>
           </li>
           <li class="nav-item">
+            <a style="color: white" class="nav-link" href="idea.html">
+              <i class="fa-solid fa-circle-question"></i>
+              Ý tưởng
+            </a>
+          </li>
+          <li class="nav-item">
             <a style="color: white" class="nav-link" href="feature.html">
               <i class="fa-solid fa-file-import"></i>
               Nhập xuất hàng
