--- a/member.html
+++ b/member.html
@@ -35,7 +35,19 @@
       }
     </style>
   </head>
-  <body>
+  <body class="area">
+    <ul class="circles">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
     <div class="loading d-none">
       <img src="./img/loading.gif" alt="" />
     </div>
@@ -77,6 +89,12 @@
             </a>
           </li>
           <li class="nav-item">
+            <a style="color: white" class="nav-link" href="idea.html">
+              <i class="fa-solid fa-circle-question"></i>
+              Ý tưởng
+            </a>
+          </li>
+          <li class="nav-item">
             <a style="color: white" class="nav-link" href="feature.html">
               <i class="fa-solid fa-file-import"></i>
               Nhập xuất hàng
@@ -110,7 +128,6 @@
         </form>
       </div>
     </nav>
-
     <div class="container">
       <div class="row">
         <div class="col-8 my-2">
