--- a/thongke.html
+++ b/thongke.html
@@ -35,7 +35,19 @@
       }
     </style>
   </head>
-  <body>
+  <body class="area">
+    <ul class="circles">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
     <div class="loading d-none">
       <img src="./img/loading.gif" alt="" />
     </div>
@@ -70,6 +82,12 @@
             <a style="color: white" class="nav-link" href="member.html">
               <i class="fa-solid fa-user"></i>
               Thành viên
+            </a>
+          </li>
+          <li class="nav-item">
+            <a style="color: white" class="nav-link" href="idea.html">
+              <i class="fa-solid fa-circle-question"></i>
+              Ý tưởng
             </a>
           </li>
           <li class="nav-item">
