--- a/trangchu.html
+++ b/trangchu.html
@@ -174,9 +174,9 @@
           </div>
           <div class="col-6 play-wrapper py-5">
             <img
-              src="../img/macbook.png"
+              src="./img/macbook.png"
               class="img-fluid d-block mx-auto"
-              alt="MacBook"
+              alt="HP"
             />
             <div class="play d-flex flex-row align-item-center show-video">
               <em class="icon" data-feather="play"></em>
