--- a/feature.html
+++ b/feature.html
@@ -130,10 +130,10 @@
     </nav>
 
     <div class="container content-background" style="min-height: 100vh">
-      <h2 class="text-center my-4">QUẢN LÝ XUẤT NHẬP SẢN PHẨM</h2>
+      <h2 class="text-center my-4 text-white">QUẢN LÝ XUẤT NHẬP SẢN PHẨM</h2>
       <div class="row gap-2 my-4">
         <div class="col-6">
-          <h4 class="text-center">Laptop Dell</h4>
+          <h4 class="text-center" style="color: silver">Laptop Dell</h4>
           <img src="./img/dell.jpg" class="w-100 img-product" alt="" />
           <div class="input-group mb-3">
             <div class="input-group-prepend">
@@ -171,7 +171,7 @@
           </div>
         </div>
         <div class="col-6">
-          <h4 class="text-center">Đồ thị biễu diễn</h4>
+          <h4 class="text-center" style="color: silver">Đồ thị biễu diễn</h4>
           <div class="chart-import-product-dell my-4">
             <iframe
               width="450"
@@ -192,7 +192,7 @@
       </div>
       <div class="row gap-2 my-4">
         <div class="col-6">
-          <h4 class="text-center">HP</h4>
+          <h4 class="text-center" style="color: silver">HP</h4>
           <img
             src="./img/hp.jpg"
             style="height: 380px"
@@ -235,7 +235,7 @@
           </div>
         </div>
         <div class="col-6">
-          <h4 class="text-center">Đồ thị biễu diễn</h4>
+          <h4 class="text-center" style="color: silver">Đồ thị biễu diễn</h4>
           <div class="chart-import-product-hp my-4">
             <iframe
               width="450"
