--- a/idea.html
+++ b/idea.html
@@ -130,7 +130,7 @@
     </nav>
 
     <div class="container">
-      <h2 class="text-center my-4">Ý TƯỞNG THỰC HIỆN</h2>
+      <h2 class="text-center my-4 text-white">Ý TƯỞNG THỰC HIỆN</h2>
 
       <table class="table">
         <thead class="thead-dark">
@@ -143,7 +143,7 @@
             <th scope="col">Thực hiện</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody style="color: silver">
           <tr>
             <th scope="row">1</th>
             <td>Nhập vào Laptop HP</td>
