--- a/member.html
+++ b/member.html
@@ -132,7 +132,7 @@
       <div class="row">
         <div class="col-8 my-2">
           <div class="data-render">
-            <h1 class="text-center mb-4">Phân công công việc</h1>
+            <h1 class="text-center mb-4 text-white">Phân công công việc</h1>
             <div class="work mb-4">
               <table border="1" style="width: 100%; cursor: pointer">
                 <tr>
@@ -162,7 +162,7 @@
               </table>
             </div>
             <div class="">
-              <h1 class="text-center mb-4">Giảng viên hướng dẫn</h1>
+              <h1 class="text-center mb-4 text-white">Giảng viên hướng dẫn</h1>
               <div class="work rounded py-4">
                 <div
                   class="d-flex gap justify-content-center align-items-center"
@@ -307,7 +307,7 @@
           </div>
         </div> -->
         <div class="col-4 my-2" style="width: 100%; cursor: pointer">
-          <h1 class="text-center mb-4">Thành viên</h1>
+          <h1 class="text-center mb-4 text-white">Thành viên</h1>
           <ul class="list-group">
             <li
               class="list-group-item active text-center"
