--- a/thongke.html
+++ b/thongke.html
@@ -130,7 +130,7 @@
     </nav>
 
     <div class="container">
-      <h1 class="text-center my-4">Thống kê</h1>
+      <h1 class="text-center my-4 text-white">Thống kê</h1>
       <table class="table">
         <thead class="thead-dark">
           <tr>
@@ -140,7 +140,7 @@
             <th scope="col">Tổng sản phẩm đã xuất</th>
           </tr>
         </thead>
-        <tbody class="body-table"></tbody>
+        <tbody class="body-table" style="color: silver"></tbody>
       </table>
     </div>
 
