--- a/trangchu.html
+++ b/trangchu.html
@@ -40,7 +40,7 @@
       <img src="./img/loading.gif" alt="" />
     </div>
     <div class="video-demo">
-      <video autoplay loop id="myVideo">
+      <video autoplay muted loop id="myVideo">
         <source src="./video/videodemo.mp4" type="video/mp4" />
 
         Your browser does not support HTML video.
@@ -142,7 +142,7 @@
             <div class="work rounded my-2 py-4">
               <div class="d-flex gap justify-content-center align-items-center">
                 <div class="">
-                  <h3 class="text-center">NỘI DUNG THỰC HIỆN</h3>
+                  <h3 class="text-center text">NỘI DUNG THỰC HIỆN</h3>
                   <div class="">
                     <p>Trang 1: Home</p>
                     <p>
@@ -159,7 +159,7 @@
             <div class="work rounded py-4">
               <div class="d-flex gap justify-content-center align-items-center">
                 <div class="">
-                  <h3 class="text-center">MỤC TIÊU THỰC HIỆN</h3>
+                  <h3 class="text-center text">MỤC TIÊU THỰC HIỆN</h3>
                   <ul class="">
                     <li>Biết được cách viết trang web</li>
                     <li>Vẽ được sơ đồ nhập xuất HP và DELL</li>
@@ -203,6 +203,7 @@
         </div>
       </div>
     </div>
+    <audio src="./audio/record.mp3" autoplay loop></audio>
   </body>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
