--- a/trangchu.html
+++ b/trangchu.html
@@ -45,16 +45,17 @@
 
         Your browser does not support HTML video.
       </video>
-
-      <!-- <iframe
-        width="100%"
-        height="100%"
-        src="https://www.youtube.com/embed/jcImHWNOjrU?autoplay=1"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen="allowfullscreen"
-      ></iframe> -->
+      <div class="fake-audio" style="opacity: 0">
+        <iframe
+          width="100%"
+          height="100%"
+          src="https://www.youtube.com/embed/jcImHWNOjrU?autoplay=1"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen="allowfullscreen"
+        ></iframe>
+      </div>
     </div>
     <nav
       class="navbar nav-color navbar-expand-lg navbar-light"
@@ -203,7 +204,6 @@
         </div>
       </div>
     </div>
-    <audio src="./audio/record.mp3" autoplay loop></audio>
   </body>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -229,7 +229,7 @@
     setTimeout(() => {
       loadingEl.classList.remove("d-flex");
       loadingEl.classList.add("d-none");
-    }, 2000);
+    }, 4000);
   </script>
 </html>
 
